--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/bulma": "^1.2.7",
     "moment": "^2.27.0",
-    "nuxt": "^2.13.0"
+    "node-sass": "^4.14.1",
+    "nuxt": "^2.13.0",
+    "sass-loader": "^8.0.2"
   },
   "devDependencies": {}
 }
